<resources>
    <string name="app_name">safe_friend</string>

    <!--LoginActivity-->
    <string name="register_text">회원가입</string>
    <string name="login_text">로그인</string>
    <string name="email_hint">email</string>
    <string name="password_hint">password</string>
    <string name="station_example">정거장 이름, 정류장 번호 검색</string>
    <string name="recent_list">클릭하여 검색</string>
    <string name="station_id">TEST 22763</string>
    <string name="station_toward">TEST 이수역 방면</string>
    <string name="subway_station">지하철역</string>
    <string name="bus_station">버스정류장</string>
    <string name="service_name">안심귀가서비스</string>
    <string name="time_set">시간 설정</string>
    <string name="notice_for_timer">※ 안심귀가 서비스는 <b>월요일 22:00 ~ 24:00,\n화-일요일 22:00 ~ 01:00</b> 까지\n이용 가능합니다.</string>
    <string name="request_confirm">신청 확인</string>
    <string name="next">다음</string>
    <string name="at">에서</string>
    <string name="on">에 안전귀가\n신청합니다.</string>
    <string name="end_sentence"><b>안심 귀가 신청</b>합니다.</string>
    <string name="confirm">확인</string>
    <string name="time_sample">22:00</string>
    <string name="step_one">1.출발지 선정</string>
    <string name="step_two">2.시간 설정</string>
    <string name="step_three">3.신청 확인</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>

    <string name="open">open</string>
    <string name="close">close</string>
    <string-array name="country_code">
        <item>+82(kr)</item>
    </string-array>

    <!--activity_end_service_user-->
    <string name="message">지킴이님에게\n감사의 마음을 전하세요.</string>
</resources>
