<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_background"
    tools:context=".LastConfirmActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/activity_last_confirm_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme"
            app:elevation="0dp"
            app:titleTextColor="@color/white">

            <LinearLayout
                android:layout_width="@dimen/process_width"
                android:layout_height="@dimen/process_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="@dimen/process_circle"
                    android:layout_height="@dimen/process_circle"
                    android:text="@string/one"
                    android:textSize="12sp"
                    android:fontFamily="@font/nanumsquare_eb"
                    android:textColor="@color/mainColor"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/process_circle_background"/>

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="@color/line_for_process"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="@dimen/process_circle"
                    android:layout_height="@dimen/process_circle"
                    android:text="@string/two"
                    android:textSize="12sp"
                    android:textColor="@color/mainColor"
                    android:fontFamily="@font/nanumsquare_eb"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/process_circle_background"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="@color/line_for_process"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/process_height"
                    android:text="@string/step_three"
                    android:textSize="12sp"
                    android:fontFamily="@font/nanumsquare_eb"
                    android:textColor="@color/text_for_process"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/process_current_background" />

            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/activity_last_confirm_title_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/title_margin_top"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="0dp"
            android:gravity="center"
            android:padding="0dp"
            android:text="@string/service_name"
            android:fontFamily="@font/nanumsquare_l"
            android:textColor="@color/service_title"
            android:textSize="24sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_margin="0dp"
            android:padding="0dp"
            android:text="@string/request_confirm"
            android:fontFamily="@font/nanumsquare_eb"
            android:textColor="@color/mainColor"
            android:textSize="40sp"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/activity_last_confirm_ll"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="45dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activity_last_confirm_title_ll">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:background="@drawable/underline"
                android:src="@drawable/ic_pin_point" />

            <TextView
                android:id="@+id/activity_last_confirm_station_name_tv"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:text="@string/bus_station"
                android:fontFamily="@font/nanumsquare_b"
                android:textColor="@color/text_for_process"
                android:textSize="18sp"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:gravity="left|center_vertical"
                android:layout_gravity="top"
                android:ellipsize="end"
                android:maxLines="1"
                android:layout_weight="1"
                android:background="@drawable/underline"/>

            <TextView
                android:id="@+id/activity_last_confirm_at_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:textAlignment="textEnd"
                android:text="@string/at"
                android:textColor="@color/text_for_item_title"/>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="25dp"
                android:layout_height="40dp"
                android:layout_gravity="top"
                android:background="@drawable/underline"
                android:src="@drawable/ic_time"/>
            <TextView
                android:id="@+id/activity_last_confirm_time_tv"
                android:layout_width="100dp"
                android:layout_height="40dp"
                android:text="@string/time_sample"
                android:fontFamily="@font/nanumsquare_b"
                android:textColor="@color/text_for_process"
                android:textSize="18sp"
                android:gravity="left|center_vertical"
                android:layout_gravity="top"
                android:paddingLeft="20dp"
                android:paddingRight="20dp"
                android:maxLines="1"
                android:background="@drawable/underline" />
            <TextView
                android:id="@+id/activity_last_confirm_on_tv"
                android:layout_marginLeft="4dp"
                android:layout_marginTop="13dp"
                android:layout_marginBottom="12dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="@string/on"
                android:textColor="@color/text_for_item_title" />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/activity_last_confirm_btn"
        android:text="@string/confirm"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:textColor="@color/text_in_button"
        android:textSize="20sp"
        android:fontFamily="@font/nanumsquare_b"
        android:background="@drawable/button_background"
        android:layout_marginBottom="@dimen/button_margin_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</android.support.constraint.ConstraintLayout>