<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SetTimeActivity">

    <TextView
        android:id="@+id/activity_set_time_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_set"
        android:textSize="50sp"
        app:layout_constraintBottom_toTopOf="@id/activity_set_time_timer_tp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TimePicker
        android:id="@+id/activity_set_time_timer_tp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintBottom_toBottomOf="@id/activity_set_time_notice_tv"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_set_time_title_tv" />

    <TextView
        android:id="@+id/activity_set_time_notice_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/notice_for_timer"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/activity_set_time_timer_tp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/activity_set_time_confirm_btn" />

    <Button
        android:id="@+id/activity_set_time_confirm_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="32dp"
        android:text="@string/next"
        android:textSize="20sp"
        android:textStyle="bold"
        android:background="#e2e2ff"
        app:layout_constraintTop_toBottomOf="@+id/activity_set_time_notice_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>