<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchPlaceActivity"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/activity_search_place_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/buttonBackground"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:elevation="0dp">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:theme="@style/AppTheme"
            app:elevation="0dp"
            app:titleTextColor="@color/white">

            <LinearLayout
                android:layout_width="@dimen/process_width"
                android:layout_height="@dimen/process_height"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/process_height"
                    android:text="@string/step_one"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/process_current_background" />
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:background="#ffefb4"
                    android:layout_gravity="center"
                    android:layout_weight="1"/>
                <TextView
                    android:layout_width="@dimen/process_height"
                    android:layout_height="@dimen/process_height"
                    android:text="@string/two"
                    android:textSize="12sp"
                    android:textColor="@color/buttonBackground"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/process_circle_background"/>
                <View
                    android:layout_width="wrap_content"
                    android:layout_height="2dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:background="#ffefb4"/>
                <TextView
                    android:layout_width="@dimen/process_height"
                    android:layout_height="@dimen/process_height"
                    android:text="@string/three"
                    android:textSize="12sp"
                    android:textColor="@color/buttonBackground"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:background="@drawable/process_circle_background"/>
            </LinearLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:id="@+id/activity_search_place_search_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:background="#ffefb4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_search_place_appbar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@drawable/searchbar_background"
            android:layout_gravity="center_horizontal"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp">

            <ImageView
                android:id="@+id/activity_search_place_search_iv"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                app:srcCompat="@android:drawable/ic_menu_search" />

            <EditText
                android:id="@+id/activity_search_place_search_edt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:inputType="text"
                android:hint="@string/recent_list"
                android:textSize="16sp"
                android:background="@null"/>
        </LinearLayout>


    </LinearLayout>


    <FrameLayout
        android:id="@+id/activity_search_place_fl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_search_place_search_ll">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/activity_search_place_rv"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </android.support.v7.widget.RecyclerView>
    </FrameLayout>
</android.support.constraint.ConstraintLayout>